Update list structure

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
         <title>Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>Amalgamation of Recipes</h1>
+        <h3>Below is a list of all the recipes we can cook together!</h3>
+        <ol>
+            <li> <a href="./recipes/stickybeef.html">Sticky Beef</a></li>
+            <li> <a href ="./recipes/eggstoast.html">Eggs on Toast</a></li>
+            <li> <a href = "./recipes/sausageskewers.html">Sausage Skewers</a></li>
+        </ol>
+       
     </body>
 </html>
